--- a/nginx-php.conf
+++ b/nginx-php.conf
@@ -1,5 +1,6 @@
 server {
     listen  80;
+    listen [::]:80;
     root /var/www/html;
     index index.php index.html index.htm;
     server_name example.com;
